--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="#">About</a></li>
                     <li><a href="#">FAQs</a></li>
                     <li>
-                        <a href="#" class="login"> Login</a>
+                        <a href="login.html" class="login"> Login</a >
                     </li>
                 </ul>
             </div>
@@ -45,7 +45,7 @@
                     <a href="#">FAQs</a>
                 </li>
             </ul>
-            <a href="" class="button">Login</a>
+            <a href="login.html" class="button">Login</a>
         </div>
     </div>
 
